# SCZR-real-time-meteorological-simulation

./: .gitignore  CMakeLists.txt  README.md  histogram_creator.py  mail.txt
include/: AbstractProcess.h  ProcessA.h  ProcessB.h  ProcessC.h  SharedMemory.h  SharedQueue.h  Station.h  Stations.h  utilities.h
src/: ProcessA.cpp  ProcessB.cpp  ProcessC.cpp  SharedMemory.cpp  SharedQueue.cpp  Station.cpp  Stations.cpp  main.cpp
